--- a/src/app/demo/components/dashboard/dashboard.component.html
+++ b/src/app/demo/components/dashboard/dashboard.component.html
@@ -55,7 +55,7 @@
                                 mode="basic" 
                                 name="image" 
                                 chooseIcon="pi pi-upload" 
-                                url="https://vps-600cbc6a.vps.ovh.net/backend/profile/{{userid}}" 
+                                url="https://app.eulabel.it/backend//profile/{{userid}}" 
                                 accept="image/*" maxFileSize="1000000" 
                                 [auto]="true" 
                                 (onUpload)="onBasicUpload()"
