--- a/src/app/demo/components/elabel/elabel.component.html
+++ b/src/app/demo/components/elabel/elabel.component.html
@@ -315,7 +315,7 @@
                                                     mode="basic" 
                                                     name="image" 
                                                     chooseIcon="pi pi-upload" 
-                                                    url="https://vps-600cbc6a.vps.ovh.net/backend/upload-preview/{{id}}" 
+                                                    url="https://app.eulabel.it/backend//upload-preview/{{id}}" 
                                                     accept="image/*" maxFileSize="1000000" 
                                                     [auto]="true" 
                                                     (onUpload)="onBasicUpload()"
@@ -332,7 +332,7 @@
                                             mode="basic" 
                                             name="image" 
                                             chooseIcon="pi pi-upload" 
-                                            url="https://vps-600cbc6a.vps.ovh.net/backend/upload-sub/{{id}}" 
+                                            url="https://app.eulabel.it/backend//upload-sub/{{id}}" 
                                             accept="image/*" maxFileSize="1000000" 
                                             [auto]="true" 
                                             (onUpload)="onBasicUpload()"
