--- a/src/app/demo/components/auth/login/login.component.html
+++ b/src/app/demo/components/auth/login/login.component.html
@@ -33,7 +33,7 @@
                     </div>
                     <button pButton pRipple label="Login" (click)="login()" class="w-full p-3 text-xl"></button>
                     <div (click)="register()">
-                        <p>{{ 'global.register.text' | translate}} <a >{{ 'global.register.button' | translate}}</a></p>
+                        <p>{{ 'global.register.text' | translate}} <a style="cursor: pointer;">{{ 'global.register.button' | translate}}</a></p>
                     </div>
                 </div>
             </div>
