--- a/src/app/demo/components/elabel/elabel.component.html
+++ b/src/app/demo/components/elabel/elabel.component.html
@@ -4,7 +4,7 @@
     </div>
 
     <div class="flex">
-        <div class="w-9">
+        <div class="w-8">
             <p-card [header]="'pages.elabel.title' | translate" [subheader]="'pages.elabel.subtitle' | translate">
                 <p-toast position="top-center" key="tc"></p-toast>
                 <p-confirmPopup></p-confirmPopup>
@@ -62,6 +62,7 @@
                                                 <div class="field col-6 md:col-6">
                                                     <label class="col-12 md:col-10">{{ 'pages.elabel.form.geographical_indication.label' | translate }} <app-infobutton [label]="'pages.elabel.form.geographical_indication.helper'"></app-infobutton></label>
                                                     <div class="col-12 md:col-10">
+                                                        {{form.get('geographical_indication').value | json}}
                                                         <p-dropdown [options]="geographical_indication" [formControl]="form.get('geographical_indication')"
                                                             [showClear]="true" placeholder="Seleziona">
                                                             <ng-template let-option pTemplate="selectedItem">
@@ -84,7 +85,7 @@
                                                 <div class="field col-6 md:col-6">
                                                     <label class="col-12 md:col-10">{{ 'pages.elabel.form.net_content.label' | translate }} <app-infobutton [label]="'pages.elabel.form.net_content.helper'"></app-infobutton></label>
                                                     <div class="col-12 md:col-10">
-                                                        <input class="w-full" pInputText [formControl]="form.get('net_content')" type="number" min="0" max="100" />
+                                                        <input class="w-full" pInputText [formControl]="form.get('net_content')" type="number" min="0" max="1000" />
                                                     </div>
                                                 </div>
 
@@ -365,8 +366,8 @@
                 </div>
             </p-card>
         </div>
-        <div class="w-3">
-            preview
+        <div class="w-4 h-full bg-white">
+            <app-preview [preview_image]="preview_image" [sub_image]="sub_image" [form]="form"></app-preview>
         </div>
     </div>
 
