--- a/src/app/demo/components/auth/login/login.component.html
+++ b/src/app/demo/components/auth/login/login.component.html
@@ -6,16 +6,10 @@
     </div>
     <div class="flex flex-column align-items-center justify-content-center">
         <img src="assets/layout/images/{{layoutService.config.colorScheme === 'light' ? 'logo-dark' : 'logo-white'}}.svg"
-            alt="Sakai logo" class="mb-5 w-6rem flex-shrink-0">
+            alt="Sakai logo" class="mb-5 w-20rem flex-shrink-0">
         <div
-            style="border-radius:56px; padding:0.3rem; background: linear-gradient(180deg, var(--primary-color) 10%, rgba(33, 150, 243, 0) 30%);">
-            <div class="w-full surface-card py-8 px-5 sm:px-8" style="border-radius:53px">
-                <div class="text-center mb-5">
-                    <img src="assets/demo/images/login/avatar.png" alt="Image" height="50" class="mb-3">
-                    <div class="text-900 text-3xl font-medium mb-3">Bentornati</div>
-                    <span class="text-600 font-medium">Accedere per continuare</span>
-                </div>
-
+            style=" padding:0.3rem; background: linear-gradient(180deg, var(--primary-color) 10%, rgba(33, 150, 243, 0) 30%);">
+            <div class="w-full surface-card py-8 px-5 sm:px-8">
                 <div>
                     <label for="email1" class="block text-900 text-xl font-medium mb-2">Email</label>
                     <input [(ngModel)]="email" id="email1" type="text" placeholder="Email address" pInputText
@@ -32,6 +26,9 @@
 
                     </div>
                     <button pButton pRipple label="Login" (click)="login()" class="w-full p-3 text-xl"></button>
+                    <div class="mt-3" (click)="register()">
+                        <p>{{ 'global.forgot.text' | translate}} <a style="cursor: pointer;">{{ 'global.forgot.button' | translate}}</a></p>
+                    </div>
                     <div (click)="register()">
                         <p>{{ 'global.register.text' | translate}} <a style="cursor: pointer;">{{ 'global.register.button' | translate}}</a></p>
                     </div>
