--- a/src/app/layout/app.layout.component.html
+++ b/src/app/layout/app.layout.component.html
@@ -5,10 +5,14 @@
     </div>
     <div class="layout-main-container">
         <div class="layout-main">
+
             <router-outlet></router-outlet>
+
         </div>
         <app-footer></app-footer>
     </div>
-    <app-config></app-config>
+
+
+<!--    <app-config></app-config> -->
     <div class="layout-mask"></div>
 </div>
