--- a/src/assets/layout/styles/theme/lara-light-blue/theme.css
+++ b/src/assets/layout/styles/theme/lara-light-blue/theme.css
@@ -175,7 +175,7 @@
   --indigo-200:#bcbdf9;
   --indigo-300:#9ea0f6;
   --indigo-400:#8183f4;
-  --indigo-500:#6366f1;
+  --indigo-500:#213B8D;
   --indigo-600:#5457cd;
   --indigo-700:#4547a9;
   --indigo-800:#363885;
@@ -4374,7 +4374,8 @@ p-treeselect.p-treeselect-clearable .p-treeselect-clear-icon {
 }
 .p-tabview .p-tabview-panels {
   background: #ffffff;
-  padding: 1.25rem;
+  padding: 0px !important;
+  margin-top:1rem;
   border: 0 none;
   color: #495057;
   border-bottom-right-radius: 6px;
